# oxideterm.cloud-sync-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
docs/: README.zh-CN.md
src/: api.rs  auth.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  panel.rs
